# clawreach

./: README.md
components/rlottie/: CMakeLists.txt
examples/clawreach/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/clawreach/src/: CMakeLists.txt  camera.cpp  cmd.cpp  idf_component.yml  main.cpp  main.h  media.cpp  qr_setup.cpp  websocket.cpp
